[project]
name = "s8l-linebot"
version = "0.1.0"
description = "LINE Webhook microservice for URL shortening"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "line-bot-sdk==3.8.0",
    "celery[redis]==5.3.4",
    "requests==2.31.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.25",
    "asyncpg==0.29.0",
    "aiohttp==3.9.3",
    "beautifulsoup4==4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
